--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
             }
         }
     }
+    sourceSets {
+        main.java.srcDirs += "src/main/python"
+    }
     buildTypes {
         release {
             minifyEnabled false
