--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,12 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        //noinspection GradleDependency
+        classpath 'com.android.tools.build:gradle:4.1.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.chaquo.python:gradle:6.3.0"
+        classpath "com.chaquo.python:gradle:9.1.0"
     }
 }
 
