--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ecdhActivity"></activity>
+        <activity android:name=".ecdhActivity" />
         <activity android:name=".pskActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
